# hf_document_classifier

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg
src/hf_document_classifier/: classifier.py
