[metadata]
name = hf-document-classifier
version = attr: hf_document_classifier.__version__
description = abstracted classification using hugging face pipeline for fine tuned PLM
author = Angeles
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    transformers
    tensorflow
    more-itertools


[options.packages.find]
where = src


[options.extras_require]
torch =
    torch
    accelerate
